crates/wac-parser/tests/resolution/fail/duplicate-import.wac
package test:comp;

import foo as "foo": func();
import bar as foo: func();
